--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,800&display=swap" rel="stylesheet">
 
-		<title>КарданВалЛипецк</title>
+		<title>Kardan-Kardanov</title>
 	</head>
 	<body>
 		
@@ -57,7 +57,7 @@
 							<a class="nav-link" href="index.html">Главная</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#benefits">О нас</a> 
+							<a class="nav-link" href="#benefits">Кто мы</a> 
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#stages">Этапы ремонта</a>
@@ -96,7 +96,124 @@
 					
 		</header>
 		
-	
+		<section class="who-we">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h2 class="section-heading">Кто мы</h2>
+					</div>
+				</div>
+				<div class="row align-items-center">
+					<div class="col-md-6 col-lg-7">
+						<img src="img/who-we-1.gif" class="img-fluid">
+					</div>
+					<div class="col-md-6 col-lg-5">
+						<p>Kardan-Kardanov - одно из крупнейших и долговечных предприятий страны, работающее в сфере обслуживания карданных валов. Наш многолетний опыт и соответствие самым современным требованиям – гарантия того, что у нас Вы получите качественный ремонт карданного вала на выгодных условиях и в короткий срок.</p>		
+					</div>				
+					<div class="col-md-6 col-lg-10 mt-5">
+						<p>В нашем арсенале ремонт любой сложности от карданного вала КамАЗ до замены крестовины кардана ВАЗ 2106, в том числе обслуживание сельхозтехники, редких и вышедших из производства моделей авто.</p>
+						<p>В случае, когда требуется замена карданного вала, мы готовы предложить под заказ новые валы, собранные нашими специалистами из заводских комплектующих. Но чаще для исправной работы механизма достаточно заменить какую-то деталь, будь то крестовина, подвесной подшипник, вилка и т.д., и в этом случае – в Вашем распоряжении обширный склад запчастей и комплектующих для карданных валов как отечественного, так и зарубежного производства.</p>
+						<p>Ремонт карданного вала – ответственное дело, не терпящее отлагательств. Обращайтесь за помощью в Kardan-Kardanov, мы всегда рады новым клиентам и старым друзьям!</p>
+					</div>
+					<div class="col-md-6 col-lg-2 mt-5">
+						<img src="img/who-we-2.jpg" class="img-fluid">
+					</div>
+				</div>	
+			</div>
+		</section>
+		
+		<section class="numbers bg-brown">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h2 class="section-heading">О нас в цифрах</h2>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col numbers__item">
+						<span class="numbers__number">20</span> лет на российском рынке услуг
+					</div>
+					<div class="col numbers__item">
+						<span class="numbers__number">14</span> автосервисов, оборудованных по последнему слову техники
+					</div>
+					<div class="col numbers__item">
+						<span class="numbers__number">6</span> месяцев гарантийного обслуживания
+					</div>
+					<div class="col numbers__item">
+						<span class="numbers__number">1</span> сутки на ремонт любого карданного вала
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section class="stages">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h2 class="section-heading">Этапы ремонта</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-8 offset-lg-2">
+						<div class="stages__item stages__item1">
+							<h3>Обращение клиента</h3>
+							<p>После того, как вы обнаружили проблему в работе кардана, не замедлите с обращением в автосервис! Мы принимаем в ремонт карданные валы любой конфигурации и работаем с поломками любой сложности.</p>
+						</div>
+						<div class="stages__item stages__item2">
+							<h3>Диагностика неполадок</h3>
+							<p>У нас есть специальное высокоточное оборудование для определения неполадки, составление плана предстоящих работ не займёт у нас много времени.</p>
+						</div>
+						<div class="stages__item stages__item3">
+							<h3>Согласование с клиентом</h3>
+							<p>Прежде, чем предпринимать какие-либо действия, мы убедимся в том, что вас устраивают намеченные нами планы и условия их реализации.</p>
+						</div>
+						<div class="stages__item stages__item4">
+							<h3>Ремонт кардана</h3>
+							<p>Основная и самая ответственная часть работы. Мы не отдадим кардан клиенту, пока не убедимся, что агрегат работает точно и без помех.</p>
+						</div>
+						<div class="stages__item stages__item5">
+							<h3>Балансировка</h3>
+							<p>Залог успешной работы карданного вала – его баланс, поэтому любой ремонт оканчивается у нас балансировкой, для чего у нас есть специализированные станки.</p>
+						</div>
+						<div class="stages__item stages__item6">
+							<h3>Возврат кардана клиенту</h3>
+							<p>Когда все работы выполнены, мы устанавливаем карданный вал на автомобиль или, если нет такой необходимости, возвращаем его на руки клиенту. Независимо от того, как в дальнейшем он будет эксплуатироваться, мы даём гарантию на его бесплатное обслуживание в течение 6 последующих месяцев.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h2 class="section-heading">Цены</h2>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section class="bg-blue">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h2 class="section-heading">Контакты</h2>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<footer class="bg-brown">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						
+					</div>
+				</div>
+			</div>
+		</footer>
+		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
