--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Neucha&display=swap&subset=cyrillic" rel="stylesheet">
 
 		<title>Kardan-Kardanov</title>
 	</head>
@@ -184,31 +185,40 @@
 			</div>
 		</section>
 		
-		<section>
+		<footer class="">
 			<div class="container">
-				<div class="row">
+				<div class="row align-items-center mb-5">
 					<div class="col">
-						<h2 class="section-heading">Цены</h2>
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="#">Главная</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Услуги</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Цены</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Статьи</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Контакты</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col text-center">
+						<p class="navbar-brand" href="index.html">Kardan-Kardanov</p>
+					</div>
+					<div class="col text-right">
+						<p><a href="tel:88005552967">8 (800) 555-29-67</a></p>
+						<p><a href="tel:84955653237">8 (495) 565-32-37</a></p>
+						<p><a href="mailto:info@kardan-kardanov.ru">info@kardan-kardanov.ru</a></p>
 					</div>
 				</div>
-			</div>
-		</section>
-		
-		<section class="bg-blue">
-			<div class="container">
 				<div class="row">
 					<div class="col">
-						<h2 class="section-heading">Контакты</h2>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<footer class="bg-brown">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						
+						<p class="wish">Счастливых вам дорог!</p>
 					</div>
 				</div>
 			</div>
