adjust who we section adaptability

--- a/index.html
+++ b/index.html
@@ -99,19 +99,21 @@
 						<h2 class="section-heading">Кто мы</h2>
 					</div>
 				</div>
-				<div class="row align-items-center">
-					<div class="col-md-6 col-lg-7">
+				<div class="row align-items-start">
+					<div class="col-md-12 col-lg-5 order-lg-2">
+						<p>Kardan-Kardanov - одно из крупнейших и долговечных предприятий страны, работающее в сфере обслуживания карданных валов. Наш многолетний опыт и соответствие самым современным требованиям – гарантия того, что у нас Вы получите качественный ремонт карданного вала на выгодных условиях и в короткий срок.</p>		
+					</div>
+					<div class="col-md-12 col-lg-7 text-center order-lg-1 my-5 my-lg-0">
 						<img src="img/who-we-1.gif" class="img-fluid">
 					</div>
-					<div class="col-md-6 col-lg-5">
-						<p>Kardan-Kardanov - одно из крупнейших и долговечных предприятий страны, работающее в сфере обслуживания карданных валов. Наш многолетний опыт и соответствие самым современным требованиям – гарантия того, что у нас Вы получите качественный ремонт карданного вала на выгодных условиях и в короткий срок.</p>		
-					</div>				
-					<div class="col-md-6 col-lg-10 mt-5">
+				</div>
+				<div class="row align-items-start">							
+					<div class="col-md-9 col-lg-10 mt-lg-5">
 						<p>В нашем арсенале ремонт любой сложности от карданного вала КамАЗ до замены крестовины кардана ВАЗ 2106, в том числе обслуживание сельхозтехники, редких и вышедших из производства моделей авто.</p>
 						<p>В случае, когда требуется замена карданного вала, мы готовы предложить под заказ новые валы, собранные нашими специалистами из заводских комплектующих. Но чаще для исправной работы механизма достаточно заменить какую-то деталь, будь то крестовина, подвесной подшипник, вилка и т.д., и в этом случае – в Вашем распоряжении обширный склад запчастей и комплектующих для карданных валов как отечественного, так и зарубежного производства.</p>
 						<p>Ремонт карданного вала – ответственное дело, не терпящее отлагательств. Обращайтесь за помощью в Kardan-Kardanov, мы всегда рады новым клиентам и старым друзьям!</p>
 					</div>
-					<div class="col-md-6 col-lg-2 mt-5">
+					<div class="d-none d-md-flex col-md-3 col-lg-2 mt-lg-5">
 						<img src="img/who-we-2.jpg" class="img-fluid">
 					</div>
 				</div>	
