adjust numbers section adaptability

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 		</section>
 		
-		<section class="numbers bg-brown">
+		<section class="numbers">
 			<div class="container">
 				<div class="row">
 					<div class="col">
@@ -128,16 +128,16 @@
 					</div>
 				</div>
 				<div class="row text-center">
-					<div class="col numbers__item">
+					<div class="col-6 col-md-3 numbers__item">
 						<span class="numbers__number">20</span> лет на российском рынке услуг
 					</div>
-					<div class="col numbers__item">
+					<div class="col-6 col-md-3 numbers__item">
 						<span class="numbers__number">14</span> автосервисов, оборудованных по последнему слову техники
 					</div>
-					<div class="col numbers__item">
+					<div class="col-6 col-md-3 numbers__item">
 						<span class="numbers__number">6</span> месяцев гарантийного обслуживания
 					</div>
-					<div class="col numbers__item">
+					<div class="col-6 col-md-3 numbers__item">
 						<span class="numbers__number">1</span> сутки на ремонт любого карданного вала
 					</div>
 				</div>
