--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			</div>
 		</section>
 		
-		<footer class="">
+		<footer>
 			<div class="container">
 				<div class="row align-items-center mb-5">
 					<div class="col">
