--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
 		
 		<footer>
 			<div class="container">
-				<div class="row align-items-center mb-5">
-					<div class="col">
+				<div class="row align-items-start align-items-lg-center mb-5">
+					<div class="col-sm-6 col-lg-4 order-2 order-lg-1">
 						<ul class="navbar-nav">
 							<li class="nav-item">
 								<a class="nav-link" href="#">Главная</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Услуги</a>
+								<a class="nav-link" href="#">Кто мы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Цены</a>
+								<a class="nav-link" href="#">Этапы ремонта</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Статьи</a>
@@ -204,12 +204,11 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col text-center">
+					<div class="col-sm-12 col-lg-4 text-center order-1 order-lg-2 mb-5 mb-lg-0">
 						<p class="navbar-brand" href="index.html">Kardan-Kardanov</p>
 					</div>
-					<div class="col text-right">
-						<p><a href="tel:88005552967">8 (800) 555-29-67</a></p>
-						<p><a href="tel:84955653237">8 (495) 565-32-37</a></p>
+					<div class="col-sm-6 col-lg-4 text-sm-right order-3 mt-5 mt-sm-0">
+						<p><a href="tel:84950000000">8 (495) 000-00-00</a></p>
 						<p><a href="mailto:info@kardan-kardanov.ru">info@kardan-kardanov.ru</a></p>
 					</div>
 				</div>
