--- a/posts.html
+++ b/posts.html
@@ -63,16 +63,16 @@
 							<a class="nav-link" href="index.html">Главная</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index.html#who">Кто мы</a> 
+							<a class="nav-link" href="#benefits">Кто мы</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index.html#stages">Этапы ремонта</a>
+							<a class="nav-link" href="#stages">Этапы ремонта</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="posts.html">Статьи</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#contacts">Контакты</a>
+							<a class="nav-link" href="#contacts ">Контакты</a>
 						</li>
 					</ul>
 				</div>				
@@ -92,7 +92,7 @@
 					
 		</header>
 		
-		<section id="who" class="who-we">
+		<section class="who-we">
 			<div class="container">
 				<div class="row">
 					<div class="col">
@@ -144,7 +144,7 @@
 			</div>
 		</section>
 		
-		<section id="stages" class="stages">
+		<section class="stages">
 			<div class="container">
 				<div class="row">
 					<div class="col">
@@ -182,22 +182,25 @@
 			</div>
 		</section>
 		
-		<footer id="contacts">
+		<footer>
 			<div class="container">
 				<div class="row align-items-start align-items-lg-center mb-5">
 					<div class="col-sm-6 col-lg-4 order-2 order-lg-1">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="index.html">Главная</a>
+								<a class="nav-link" href="#">Главная</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="index.html#who">Кто мы</a>
+								<a class="nav-link" href="#">Кто мы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="index.html#stages">Этапы ремонта</a>
+								<a class="nav-link" href="#">Этапы ремонта</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="posts.html">Статьи</a>
+								<a class="nav-link" href="#">Статьи</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Контакты</a>
 							</li>
 						</ul>
 					</div>
