--- a/posts.html
+++ b/posts.html
@@ -79,9 +79,116 @@
 				
 		<section style="posts">
 			<div class="container">
-				<div class="row text-center">
+				<div class="row text-center mb-5">
 					<div class="col">
 						<h1>Статьи</h1>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="https://static.wixstatic.com/media/e5a1f4_427f5af606d841c9807356c769e26549~mv2.jpg_srz_960_640_85_22_0.50_1.20_0.00_jpg_srz" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="https://cargo-parts.ua/images/Agro-assortiment/KARDAN_AGRO.jpg" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Не следует, однако забывать, что консультация с широким активом влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Товарищи! рамки и место обучения кадров играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="https://modaauto.ru/files/slide/big/dcc52e3f05dfef40be653c11f38b3af3df663b1d.jpg" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Задача организации, в особенности же сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют определения и уточнения модели развития. Идейные соображения высшего порядка, а также рамки и место обучения кадров позволяет выполнять важные задания по разработке существенных финансовых и административных условий.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="http://3.imimg.com/data3/OC/GG/MY-10640962/10-and-11-inches-cardan-shaft.jpg" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Повседневная практика показывает, что новая модель организационной деятельности способствует подготовки и реализации системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям. Повседневная практика показывает, что укрепление и развитие структуры позволяет оценить значение соответствующий условий активизации.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="http://i.mycdn.me/i?r=AzEPZsRbOZEKgBhR0XGMT1RkJGsfjrvwrTUc4ll0NKdr4KaKTM5SRkZCeTgDn6uOyic" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки соответствующий условий активизации. Задача организации, в особенности же реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании форм развития. Таким образом консультация с широким активом в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="posts__item">
+							<div class="row">
+								<div class="col-md-4 col-lg-2">
+									<div class="posts__item__img-wrapper mb-3 mb-md-0">
+										<img src="https://tatkardan64.ru/img/12356620_1920.jpg" class="img-fluid">
+									</div>
+								</div>
+								<div class="col-md-8 col-lg-10">
+									<h2><a href="post.html">Заголовок статьи</a></h2>
+									<p>Равным образом дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям. Товарищи! укрепление и развитие структуры способствует подготовки и реализации новых предложений. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач.</p>
+									<p><a href="post.html" class="posts__item__link">читать далее</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<ul class="pagination justify-content-center">
+							<li class="page-item">
+								<a class="page-link" href="#" aria-label="Previous">
+									<span aria-hidden="true">&laquo;</span>
+								</a>
+							</li>
+							<li class="page-item active"><a class="page-link" href="#">1</a></li>
+							<li class="page-item"><a class="page-link" href="#">2</a></li>
+							<li class="page-item"><a class="page-link" href="#">3</a></li>
+							<li class="page-item">
+								<a class="page-link" href="#" aria-label="Next">
+									<span aria-hidden="true">&raquo;</span>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
