--- a/post.html
+++ b/post.html
@@ -42,7 +42,6 @@
 				</div>
 			</div>
 		</div>
-	
 
 		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand" href="index.html">Kardan-Kardanov</a>
@@ -77,100 +76,29 @@
 			</div>				
 		</nav>
 				
-		<section style="posts">
+		<section>
 			<div class="container">
-				<div class="row text-center mb-5">
-					<div class="col">
-						<h1>Статьи</h1>
-					</div>
-				</div>
 				<div class="row">
-					<div class="col">
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThNuKvuIxC8bryCVVTzzOa-3ja8QBtVpY_k-MRbtZxazu5AttwgA" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2><a href="#">Заголовок статьи</a></h2>
-									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития.</p>
-									<p><a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR43E-U7hGis3h1RM5Ss1el3HDEKYkcjwDWwJL7Jv09kOqWdAZqNg" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2>Заголовок статьи</h2>
-									<p>Не следует, однако забывать, что консультация с широким активом влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Товарищи! рамки и место обучения кадров играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям<a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSoU6YTQlGPKCBMd9FHGOGvH5k6fl-3vGANKuSYJt98Xg5g8cq9g" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2>Заголовок статьи</h2>
-									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития... <a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-ILyiKFth6h0OZDBoypo56v8ui5jdVxvhCNJN1_WwOkRTJPff" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2>Заголовок статьи</h2>
-									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития... <a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcr0QAEZ3bQocDMnEiRWvvtaGhlkDzYkcTUcMYzQz0KHRn5QlDtg" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2>Заголовок статьи</h2>
-									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития... <a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="posts__item">
-							<div class="row">
-								<div class="col-md-2">
-									<div class="posts__item__img-wrapper">
-										<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPNSkq4bhMU967m7Zy0xoIQx7Tg-irOLjBC7ZH8aNDUb5iJHPR8w" class="img-fluid">
-									</div>
-								</div>
-								<div class="col-md-10">
-									<h2>Заголовок статьи</h2>
-									<p>Равным образом постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития... <a href="#">читать далее</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
+					<main class="col-lg-8 col-xl-9 mb-5">
+						<h1 class="mb-5">Название статьи про карданы</h1>
+						<p>С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации форм развития. Повседневная практика показывает, что начало повседневной работы по формированию позиции позволяет оценить значение дальнейших направлений развития. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения форм развития. Равным образом дальнейшее развитие различных форм деятельности требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Не следует, однако забывать, что укрепление и развитие структуры требуют от нас анализа системы обучения кадров, соответствует насущным потребностям. Задача организации, в особенности же рамки и место обучения кадров способствует подготовки и реализации новых предложений.</p>
+						<p>Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание новых предложений. Таким образом укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании модели развития. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание форм развития. Товарищи! дальнейшее развитие различных форм деятельности требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны дальнейшее развитие различных форм деятельности позволяет выполнять важные задания по разработке новых предложений.</p>
+						<p>Не следует, однако забывать, что реализация намеченных плановых заданий позволяет выполнять важные задания по разработке направлений прогрессивного развития. Таким образом начало повседневной работы по формированию позиции позволяет оценить значение систем массового участия. Таким образом новая модель организационной деятельности играет важную роль в формировании модели развития. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа дальнейших направлений развития.</p>
+						<p>Равным образом реализация намеченных плановых заданий способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития.</p>
+						<p>С другой стороны укрепление и развитие структуры играет важную роль в формировании модели развития. Задача организации, в особенности же сложившаяся структура организации в значительной степени обуславливает создание новых предложений. Повседневная практика показывает, что начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки дальнейших направлений развития. Товарищи! новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. С другой стороны сложившаяся структура организации требуют от нас анализа дальнейших направлений развития.</p>
+					</main>
+					<aside class="col-lg-4 col-xl-3">
+						<div class="banner-1 text-center">
+							<p class="h2 mb-5">Решаем проблемы с карданными валами</p>
+							<p>быстро<small>от 3 часов до 1 дня</small></p>
+							<p>качественно<small>до заводского состояния</small></p>
+							<p>с гарантией<small>до 6 месяцев</small></p>
+							<button type="button" class="btn">Решить мою проблему</button>
+						</div>		
+					</aside>
 				</div>
 			</div>
 		</section>	
-					
-		
 		
 		<footer id="contacts">
 			<div class="container">
