--- a/posts.html
+++ b/posts.html
@@ -77,7 +77,7 @@
 			</div>				
 		</nav>
 				
-		<section style="posts">
+		<section>
 			<div class="container">
 				<div class="row text-center mb-5">
 					<div class="col">
