--- a/posts.html
+++ b/posts.html
@@ -21,9 +21,9 @@
 	<body>
 		
 		<div class="modal fade order-modal" id="orderModal" tabindex="-1" role="dialog">
-			<div class="modal-dialog" role="document">
+			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content">				
-					<div class="modal-body">
+					<div class="modal-body text-center">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 						</button>
